--- a/index.html
+++ b/index.html
@@ -10,16 +10,748 @@
     <td>Score</td>
     <td>Friend</td>
     <td>Foe</td>
-</tr><tr><td>Foe</td>
-<td>50</td>
+</tr><tr><td>Copieur</td>
+<td>300</td>
+<td>100</td>
 <td>0</td>
+<td>Daddy</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Copieur</td>
+<td>0</td>
+<td>1</td>
+<td>99</td>
+<td>Foe</td>
+<td>5</td>
+<td>0</td>
+<td>100</td>
+</tr><td>Copieur</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Friend</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Copieur</td>
+<td>191</td>
+<td>48</td>
+<td>52</td>
+<td>Indecis</td>
+<td>196</td>
+<td>47</td>
+<td>53</td>
+</tr><td>Copieur</td>
+<td>3</td>
+<td>2</td>
+<td>98</td>
+<td>Issam</td>
+<td>8</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Copieur</td>
+<td>3</td>
+<td>2</td>
+<td>98</td>
+<td>Lea</td>
+<td>8</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Copieur</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+<td>Neosia67</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+</tr><td>Copieur</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Pacificateur</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Copieur</td>
+<td>299</td>
+<td>99</td>
+<td>1</td>
+<td>Paultato</td>
+<td>299</td>
+<td>99</td>
+<td>1</td>
+</tr><td>Copieur</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Pavlov</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Copieur</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Rancunier</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Copieur</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Rancunierdoux</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Copieur</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Victor</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Daddy</td>
+<td>0</td>
+<td>41</td>
+<td>59</td>
+<td>Foe</td>
+<td>205</td>
+<td>0</td>
+<td>100</td>
+</tr><td>Daddy</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+<td>Friend</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Daddy</td>
+<td>183</td>
+<td>45</td>
+<td>55</td>
+<td>Indecis</td>
+<td>193</td>
+<td>43</td>
+<td>57</td>
+</tr><td>Daddy</td>
+<td>3</td>
+<td>41</td>
+<td>59</td>
+<td>Issam</td>
+<td>203</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Daddy</td>
+<td>3</td>
+<td>39</td>
+<td>61</td>
+<td>Lea</td>
+<td>193</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Daddy</td>
+<td>262</td>
+<td>85</td>
+<td>15</td>
+<td>Neosia67</td>
+<td>267</td>
+<td>84</td>
+<td>16</td>
+</tr><td>Daddy</td>
+<td>295</td>
+<td>89</td>
+<td>11</td>
+<td>Pacificateur</td>
+<td>275</td>
+<td>93</td>
+<td>7</td>
+</tr><td>Daddy</td>
+<td>285</td>
+<td>93</td>
+<td>7</td>
+<td>Paultato</td>
+<td>285</td>
+<td>93</td>
+<td>7</td>
+</tr><td>Daddy</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+<td>Pavlov</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Daddy</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Rancunier</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Daddy</td>
+<td>245</td>
+<td>75</td>
+<td>25</td>
+<td>Rancunierdoux</td>
+<td>245</td>
+<td>75</td>
+<td>25</td>
+</tr><td>Daddy</td>
+<td>280</td>
+<td>90</td>
 <td>10</td>
+<td>Victor</td>
+<td>280</td>
+<td>90</td>
+<td>10</td>
+</tr><td>Foe</td>
+<td>500</td>
+<td>0</td>
+<td>100</td>
 <td>Friend</td>
 <td>0</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Foe</td>
+<td>275</td>
+<td>0</td>
+<td>100</td>
+<td>Indecis</td>
+<td>0</td>
+<td>55</td>
+<td>45</td>
+</tr><td>Foe</td>
+<td>5</td>
+<td>0</td>
+<td>100</td>
+<td>Issam</td>
+<td>0</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Foe</td>
+<td>5</td>
+<td>0</td>
+<td>100</td>
+<td>Lea</td>
+<td>0</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Foe</td>
+<td>5</td>
+<td>0</td>
+<td>100</td>
+<td>Neosia67</td>
+<td>0</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Foe</td>
 <td>10</td>
 <td>0</td>
-</tr></table><br /><br /><br /><table><tr><td>Foe</td><td>50</td></tr>
-<tr><td>Friend</td><td>0</td></tr>
-<tr><td><strong>Total</strong></td><td><strong>50</strong></td></tr>
+<td>100</td>
+<td>Pacificateur</td>
+<td>0</td>
+<td>2</td>
+<td>98</td>
+</tr><td>Foe</td>
+<td>5</td>
+<td>0</td>
+<td>100</td>
+<td>Paultato</td>
+<td>0</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Foe</td>
+<td>500</td>
+<td>0</td>
+<td>100</td>
+<td>Pavlov</td>
+<td>0</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Foe</td>
+<td>5</td>
+<td>0</td>
+<td>100</td>
+<td>Rancunier</td>
+<td>0</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Foe</td>
+<td>5</td>
+<td>0</td>
+<td>100</td>
+<td>Rancunierdoux</td>
+<td>0</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Foe</td>
+<td>5</td>
+<td>0</td>
+<td>100</td>
+<td>Victor</td>
+<td>0</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Friend</td>
+<td>147</td>
+<td>100</td>
+<td>0</td>
+<td>Indecis</td>
+<td>402</td>
+<td>49</td>
+<td>51</td>
+</tr><td>Friend</td>
+<td>3</td>
+<td>100</td>
+<td>0</td>
+<td>Issam</td>
+<td>498</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Friend</td>
+<td>3</td>
+<td>100</td>
+<td>0</td>
+<td>Lea</td>
+<td>498</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Friend</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+<td>Neosia67</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+</tr><td>Friend</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Pacificateur</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Friend</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+<td>Paultato</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+</tr><td>Friend</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Pavlov</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Friend</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Rancunier</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Friend</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Rancunierdoux</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Friend</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Victor</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Indecis</td>
+<td>5</td>
+<td>51</td>
+<td>49</td>
+<td>Issam</td>
+<td>255</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Indecis</td>
+<td>3</td>
+<td>47</td>
+<td>53</td>
+<td>Lea</td>
+<td>233</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Indecis</td>
+<td>202</td>
+<td>55</td>
+<td>45</td>
+<td>Neosia67</td>
+<td>207</td>
+<td>54</td>
+<td>46</td>
+</tr><td>Indecis</td>
+<td>317</td>
+<td>53</td>
+<td>47</td>
+<td>Pacificateur</td>
+<td>187</td>
+<td>79</td>
+<td>21</td>
+</tr><td>Indecis</td>
+<td>23</td>
+<td>49</td>
+<td>51</td>
+<td>Paultato</td>
+<td>243</td>
+<td>5</td>
+<td>95</td>
+</tr><td>Indecis</td>
+<td>400</td>
+<td>50</td>
+<td>50</td>
+<td>Pavlov</td>
+<td>150</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Indecis</td>
+<td>5</td>
+<td>54</td>
+<td>46</td>
+<td>Rancunier</td>
+<td>270</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Indecis</td>
+<td>199</td>
+<td>48</td>
+<td>52</td>
+<td>Rancunierdoux</td>
+<td>194</td>
+<td>49</td>
+<td>51</td>
+</tr><td>Indecis</td>
+<td>210</td>
+<td>52</td>
+<td>48</td>
+<td>Victor</td>
+<td>210</td>
+<td>52</td>
+<td>48</td>
+</tr><td>Issam</td>
+<td>3</td>
+<td>1</td>
+<td>99</td>
+<td>Lea</td>
+<td>3</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Issam</td>
+<td>8</td>
+<td>1</td>
+<td>99</td>
+<td>Neosia67</td>
+<td>3</td>
+<td>2</td>
+<td>98</td>
+</tr><td>Issam</td>
+<td>13</td>
+<td>1</td>
+<td>99</td>
+<td>Pacificateur</td>
+<td>3</td>
+<td>3</td>
+<td>97</td>
+</tr><td>Issam</td>
+<td>8</td>
+<td>1</td>
+<td>99</td>
+<td>Paultato</td>
+<td>3</td>
+<td>2</td>
+<td>98</td>
+</tr><td>Issam</td>
+<td>498</td>
+<td>1</td>
+<td>99</td>
+<td>Pavlov</td>
+<td>3</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Issam</td>
+<td>8</td>
+<td>1</td>
+<td>99</td>
+<td>Rancunier</td>
+<td>3</td>
+<td>2</td>
+<td>98</td>
+</tr><td>Issam</td>
+<td>8</td>
+<td>1</td>
+<td>99</td>
+<td>Rancunierdoux</td>
+<td>3</td>
+<td>2</td>
+<td>98</td>
+</tr><td>Issam</td>
+<td>8</td>
+<td>1</td>
+<td>99</td>
+<td>Victor</td>
+<td>3</td>
+<td>2</td>
+<td>98</td>
+</tr><td>Lea</td>
+<td>8</td>
+<td>1</td>
+<td>99</td>
+<td>Neosia67</td>
+<td>3</td>
+<td>2</td>
+<td>98</td>
+</tr><td>Lea</td>
+<td>13</td>
+<td>1</td>
+<td>99</td>
+<td>Pacificateur</td>
+<td>3</td>
+<td>3</td>
+<td>97</td>
+</tr><td>Lea</td>
+<td>8</td>
+<td>1</td>
+<td>99</td>
+<td>Paultato</td>
+<td>3</td>
+<td>2</td>
+<td>98</td>
+</tr><td>Lea</td>
+<td>498</td>
+<td>1</td>
+<td>99</td>
+<td>Pavlov</td>
+<td>3</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Lea</td>
+<td>8</td>
+<td>1</td>
+<td>99</td>
+<td>Rancunier</td>
+<td>3</td>
+<td>2</td>
+<td>98</td>
+</tr><td>Lea</td>
+<td>8</td>
+<td>1</td>
+<td>99</td>
+<td>Rancunierdoux</td>
+<td>3</td>
+<td>2</td>
+<td>98</td>
+</tr><td>Lea</td>
+<td>8</td>
+<td>1</td>
+<td>99</td>
+<td>Victor</td>
+<td>3</td>
+<td>2</td>
+<td>98</td>
+</tr><td>Neosia67</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+<td>Pacificateur</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Neosia67</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Paultato</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Neosia67</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+<td>Pavlov</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Neosia67</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+<td>Rancunier</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Neosia67</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+<td>Rancunierdoux</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Neosia67</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+<td>Victor</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Pacificateur</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+<td>Paultato</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+</tr><td>Pacificateur</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Pavlov</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Pacificateur</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Rancunier</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Pacificateur</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Rancunierdoux</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Pacificateur</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Victor</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Paultato</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+<td>Pavlov</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Paultato</td>
+<td>32</td>
+<td>11</td>
+<td>89</td>
+<td>Rancunier</td>
+<td>37</td>
+<td>10</td>
+<td>90</td>
+</tr><td>Paultato</td>
+<td>299</td>
+<td>99</td>
+<td>1</td>
+<td>Rancunierdoux</td>
+<td>299</td>
+<td>99</td>
+<td>1</td>
+</tr><td>Paultato</td>
+<td>299</td>
+<td>99</td>
+<td>1</td>
+<td>Victor</td>
+<td>299</td>
+<td>99</td>
+<td>1</td>
+</tr><td>Pavlov</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Rancunier</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Pavlov</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Rancunierdoux</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Pavlov</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Victor</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Rancunier</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Rancunierdoux</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Rancunier</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Victor</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Rancunierdoux</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Victor</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr></table><br /><br /><br /><table><tr><td>Neosia67</td><td>2894</td></tr>
+<tr><td>Copieur</td><td>2893</td></tr>
+<tr><td>Victor</td><td>2892</td></tr>
+<tr><td>Pacificateur</td><td>2862</td></tr>
+<tr><td>Pavlov</td><td>2847</td></tr>
+<tr><td>Friend</td><td>2844</td></tr>
+<tr><td>Rancunierdoux</td><td>2841</td></tr>
+<tr><td>Daddy</td><td>2760</td></tr>
+<tr><td>Rancunier</td><td>2710</td></tr>
+<tr><td>Paultato</td><td>2669</td></tr>
+<tr><td>Indecis</td><td>2155</td></tr>
+<tr><td>Foe</td><td>1530</td></tr>
+<tr><td>Issam</td><td>1518</td></tr>
+<tr><td>Lea</td><td>1486</td></tr>
+<tr><td><strong>Total</strong></td><td><strong>34901</strong></td></tr>
 </table></body>
 </html>
