Added oeil pour oeil strat

--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
 <td>100</td>
 <td>0</td>
 </tr><td>Copieur</td>
-<td>191</td>
-<td>48</td>
+<td>204</td>
 <td>52</td>
+<td>48</td>
 <td>Indecis</td>
-<td>196</td>
-<td>47</td>
-<td>53</td>
+<td>204</td>
+<td>52</td>
+<td>48</td>
 </tr><td>Copieur</td>
-<td>3</td>
-<td>2</td>
-<td>98</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
 <td>Issam</td>
-<td>8</td>
-<td>1</td>
+<td>302</td>
 <td>99</td>
+<td>1</td>
 </tr><td>Copieur</td>
 <td>3</td>
 <td>2</td>
@@ -116,74 +116,74 @@
 <td>0</td>
 </tr><td>Daddy</td>
 <td>0</td>
-<td>41</td>
-<td>59</td>
+<td>33</td>
+<td>67</td>
 <td>Foe</td>
-<td>205</td>
+<td>165</td>
 <td>0</td>
 <td>100</td>
 </tr><td>Daddy</td>
-<td>302</td>
-<td>99</td>
-<td>1</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
 <td>Friend</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Daddy</td>
+<td>152</td>
+<td>56</td>
+<td>44</td>
+<td>Indecis</td>
+<td>232</td>
+<td>40</td>
+<td>60</td>
+</tr><td>Daddy</td>
 <td>297</td>
 <td>100</td>
 <td>0</td>
-</tr><td>Daddy</td>
-<td>183</td>
-<td>45</td>
-<td>55</td>
-<td>Indecis</td>
-<td>193</td>
-<td>43</td>
-<td>57</td>
-</tr><td>Daddy</td>
-<td>3</td>
-<td>41</td>
-<td>59</td>
 <td>Issam</td>
-<td>203</td>
-<td>1</td>
+<td>302</td>
 <td>99</td>
+<td>1</td>
 </tr><td>Daddy</td>
 <td>3</td>
-<td>39</td>
-<td>61</td>
+<td>38</td>
+<td>62</td>
 <td>Lea</td>
-<td>193</td>
+<td>188</td>
 <td>1</td>
 <td>99</td>
 </tr><td>Daddy</td>
-<td>262</td>
-<td>85</td>
-<td>15</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
 <td>Neosia67</td>
-<td>267</td>
-<td>84</td>
-<td>16</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
 </tr><td>Daddy</td>
-<td>295</td>
-<td>89</td>
-<td>11</td>
+<td>276</td>
+<td>80</td>
+<td>20</td>
 <td>Pacificateur</td>
-<td>275</td>
-<td>93</td>
-<td>7</td>
+<td>246</td>
+<td>86</td>
+<td>14</td>
 </tr><td>Daddy</td>
-<td>285</td>
+<td>287</td>
 <td>93</td>
 <td>7</td>
 <td>Paultato</td>
-<td>285</td>
+<td>287</td>
 <td>93</td>
 <td>7</td>
 </tr><td>Daddy</td>
-<td>302</td>
-<td>99</td>
-<td>1</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
 <td>Pavlov</td>
-<td>297</td>
+<td>300</td>
 <td>100</td>
 <td>0</td>
 </tr><td>Daddy</td>
@@ -195,21 +195,21 @@
 <td>100</td>
 <td>0</td>
 </tr><td>Daddy</td>
-<td>245</td>
-<td>75</td>
-<td>25</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
 <td>Rancunierdoux</td>
-<td>245</td>
-<td>75</td>
-<td>25</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
 </tr><td>Daddy</td>
-<td>280</td>
-<td>90</td>
-<td>10</td>
+<td>271</td>
+<td>82</td>
+<td>18</td>
 <td>Victor</td>
-<td>280</td>
-<td>90</td>
-<td>10</td>
+<td>266</td>
+<td>83</td>
+<td>17</td>
 </tr><td>Foe</td>
 <td>500</td>
 <td>0</td>
@@ -219,205 +219,205 @@
 <td>100</td>
 <td>0</td>
 </tr><td>Foe</td>
-<td>275</td>
+<td>270</td>
 <td>0</td>
 <td>100</td>
 <td>Indecis</td>
 <td>0</td>
-<td>55</td>
-<td>45</td>
-</tr><td>Foe</td>
-<td>5</td>
-<td>0</td>
-<td>100</td>
-<td>Issam</td>
-<td>0</td>
-<td>1</td>
-<td>99</td>
-</tr><td>Foe</td>
-<td>5</td>
-<td>0</td>
-<td>100</td>
-<td>Lea</td>
-<td>0</td>
-<td>1</td>
-<td>99</td>
-</tr><td>Foe</td>
-<td>5</td>
-<td>0</td>
-<td>100</td>
-<td>Neosia67</td>
-<td>0</td>
-<td>1</td>
-<td>99</td>
-</tr><td>Foe</td>
-<td>10</td>
-<td>0</td>
-<td>100</td>
-<td>Pacificateur</td>
-<td>0</td>
-<td>2</td>
-<td>98</td>
-</tr><td>Foe</td>
-<td>5</td>
-<td>0</td>
-<td>100</td>
-<td>Paultato</td>
-<td>0</td>
-<td>1</td>
-<td>99</td>
-</tr><td>Foe</td>
-<td>500</td>
-<td>0</td>
-<td>100</td>
-<td>Pavlov</td>
-<td>0</td>
-<td>100</td>
-<td>0</td>
-</tr><td>Foe</td>
-<td>5</td>
-<td>0</td>
-<td>100</td>
-<td>Rancunier</td>
-<td>0</td>
-<td>1</td>
-<td>99</td>
-</tr><td>Foe</td>
-<td>5</td>
-<td>0</td>
-<td>100</td>
-<td>Rancunierdoux</td>
-<td>0</td>
-<td>1</td>
-<td>99</td>
-</tr><td>Foe</td>
-<td>5</td>
-<td>0</td>
-<td>100</td>
-<td>Victor</td>
-<td>0</td>
-<td>1</td>
-<td>99</td>
-</tr><td>Friend</td>
-<td>147</td>
-<td>100</td>
-<td>0</td>
-<td>Indecis</td>
-<td>402</td>
-<td>49</td>
-<td>51</td>
-</tr><td>Friend</td>
-<td>3</td>
-<td>100</td>
-<td>0</td>
-<td>Issam</td>
-<td>498</td>
-<td>1</td>
-<td>99</td>
-</tr><td>Friend</td>
-<td>3</td>
-<td>100</td>
-<td>0</td>
-<td>Lea</td>
-<td>498</td>
-<td>1</td>
-<td>99</td>
-</tr><td>Friend</td>
-<td>297</td>
-<td>100</td>
-<td>0</td>
-<td>Neosia67</td>
-<td>302</td>
-<td>99</td>
-<td>1</td>
-</tr><td>Friend</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
-<td>Pacificateur</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
-</tr><td>Friend</td>
-<td>297</td>
-<td>100</td>
-<td>0</td>
-<td>Paultato</td>
-<td>302</td>
-<td>99</td>
-<td>1</td>
-</tr><td>Friend</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
-<td>Pavlov</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
-</tr><td>Friend</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
-<td>Rancunier</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
-</tr><td>Friend</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
-<td>Rancunierdoux</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
-</tr><td>Friend</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
-<td>Victor</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
-</tr><td>Indecis</td>
-<td>5</td>
-<td>51</td>
-<td>49</td>
-<td>Issam</td>
-<td>255</td>
-<td>1</td>
-<td>99</td>
-</tr><td>Indecis</td>
-<td>3</td>
-<td>47</td>
-<td>53</td>
-<td>Lea</td>
-<td>233</td>
-<td>1</td>
-<td>99</td>
-</tr><td>Indecis</td>
-<td>202</td>
-<td>55</td>
-<td>45</td>
-<td>Neosia67</td>
-<td>207</td>
 <td>54</td>
 <td>46</td>
+</tr><td>Foe</td>
+<td>5</td>
+<td>0</td>
+<td>100</td>
+<td>Issam</td>
+<td>0</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Foe</td>
+<td>5</td>
+<td>0</td>
+<td>100</td>
+<td>Lea</td>
+<td>0</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Foe</td>
+<td>5</td>
+<td>0</td>
+<td>100</td>
+<td>Neosia67</td>
+<td>0</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Foe</td>
+<td>10</td>
+<td>0</td>
+<td>100</td>
+<td>Pacificateur</td>
+<td>0</td>
+<td>2</td>
+<td>98</td>
+</tr><td>Foe</td>
+<td>5</td>
+<td>0</td>
+<td>100</td>
+<td>Paultato</td>
+<td>0</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Foe</td>
+<td>500</td>
+<td>0</td>
+<td>100</td>
+<td>Pavlov</td>
+<td>0</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Foe</td>
+<td>5</td>
+<td>0</td>
+<td>100</td>
+<td>Rancunier</td>
+<td>0</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Foe</td>
+<td>5</td>
+<td>0</td>
+<td>100</td>
+<td>Rancunierdoux</td>
+<td>0</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Foe</td>
+<td>5</td>
+<td>0</td>
+<td>100</td>
+<td>Victor</td>
+<td>0</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Friend</td>
+<td>111</td>
+<td>100</td>
+<td>0</td>
+<td>Indecis</td>
+<td>426</td>
+<td>37</td>
+<td>63</td>
+</tr><td>Friend</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+<td>Issam</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+</tr><td>Friend</td>
+<td>3</td>
+<td>100</td>
+<td>0</td>
+<td>Lea</td>
+<td>498</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Friend</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+<td>Neosia67</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+</tr><td>Friend</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Pacificateur</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Friend</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+<td>Paultato</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+</tr><td>Friend</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Pavlov</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Friend</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Rancunier</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Friend</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Rancunierdoux</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Friend</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Victor</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
 </tr><td>Indecis</td>
-<td>317</td>
+<td>18</td>
+<td>56</td>
+<td>44</td>
+<td>Issam</td>
+<td>278</td>
+<td>4</td>
+<td>96</td>
+</tr><td>Indecis</td>
+<td>3</td>
+<td>51</td>
+<td>49</td>
+<td>Lea</td>
+<td>253</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Indecis</td>
+<td>172</td>
+<td>56</td>
+<td>44</td>
+<td>Neosia67</td>
+<td>232</td>
+<td>44</td>
+<td>56</td>
+</tr><td>Indecis</td>
+<td>320</td>
+<td>55</td>
+<td>45</td>
+<td>Pacificateur</td>
+<td>185</td>
+<td>82</td>
+<td>18</td>
+</tr><td>Indecis</td>
+<td>207</td>
+<td>52</td>
+<td>48</td>
+<td>Paultato</td>
+<td>202</td>
 <td>53</td>
 <td>47</td>
-<td>Pacificateur</td>
-<td>187</td>
-<td>79</td>
-<td>21</td>
-</tr><td>Indecis</td>
-<td>23</td>
-<td>49</td>
-<td>51</td>
-<td>Paultato</td>
-<td>243</td>
-<td>5</td>
-<td>95</td>
 </tr><td>Indecis</td>
 <td>400</td>
 <td>50</td>
@@ -427,93 +427,93 @@
 <td>100</td>
 <td>0</td>
 </tr><td>Indecis</td>
-<td>5</td>
-<td>54</td>
+<td>8</td>
 <td>46</td>
+<td>54</td>
 <td>Rancunier</td>
-<td>270</td>
-<td>1</td>
-<td>99</td>
+<td>228</td>
+<td>2</td>
+<td>98</td>
 </tr><td>Indecis</td>
-<td>199</td>
+<td>227</td>
+<td>58</td>
+<td>42</td>
+<td>Rancunierdoux</td>
+<td>222</td>
+<td>59</td>
+<td>41</td>
+</tr><td>Indecis</td>
+<td>197</td>
 <td>48</td>
 <td>52</td>
-<td>Rancunierdoux</td>
-<td>194</td>
+<td>Victor</td>
+<td>192</td>
 <td>49</td>
 <td>51</td>
-</tr><td>Indecis</td>
-<td>210</td>
-<td>52</td>
-<td>48</td>
-<td>Victor</td>
-<td>210</td>
-<td>52</td>
-<td>48</td>
 </tr><td>Issam</td>
 <td>3</td>
-<td>1</td>
-<td>99</td>
+<td>4</td>
+<td>96</td>
 <td>Lea</td>
-<td>3</td>
+<td>18</td>
 <td>1</td>
 <td>99</td>
 </tr><td>Issam</td>
-<td>8</td>
-<td>1</td>
+<td>297</td>
 <td>99</td>
+<td>1</td>
 <td>Neosia67</td>
-<td>3</td>
-<td>2</td>
-<td>98</td>
-</tr><td>Issam</td>
-<td>13</td>
-<td>1</td>
+<td>297</td>
 <td>99</td>
+<td>1</td>
+</tr><td>Issam</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
 <td>Pacificateur</td>
-<td>3</td>
-<td>3</td>
-<td>97</td>
-</tr><td>Issam</td>
-<td>8</td>
-<td>1</td>
-<td>99</td>
-<td>Paultato</td>
-<td>3</td>
-<td>2</td>
-<td>98</td>
-</tr><td>Issam</td>
-<td>498</td>
-<td>1</td>
-<td>99</td>
-<td>Pavlov</td>
-<td>3</td>
+<td>297</td>
 <td>100</td>
 <td>0</td>
 </tr><td>Issam</td>
-<td>8</td>
-<td>1</td>
+<td>299</td>
 <td>99</td>
+<td>1</td>
+<td>Paultato</td>
+<td>299</td>
+<td>99</td>
+<td>1</td>
+</tr><td>Issam</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
+<td>Pavlov</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
+</tr><td>Issam</td>
+<td>302</td>
+<td>99</td>
+<td>1</td>
 <td>Rancunier</td>
-<td>3</td>
-<td>2</td>
-<td>98</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
 </tr><td>Issam</td>
-<td>8</td>
-<td>1</td>
+<td>302</td>
 <td>99</td>
+<td>1</td>
 <td>Rancunierdoux</td>
-<td>3</td>
-<td>2</td>
-<td>98</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
 </tr><td>Issam</td>
-<td>8</td>
-<td>1</td>
+<td>302</td>
 <td>99</td>
+<td>1</td>
 <td>Victor</td>
-<td>3</td>
-<td>2</td>
-<td>98</td>
+<td>297</td>
+<td>100</td>
+<td>0</td>
 </tr><td>Lea</td>
 <td>8</td>
 <td>1</td>
@@ -738,20 +738,20 @@
 <td>300</td>
 <td>100</td>
 <td>0</td>
-</tr></table><br /><br /><br /><table><tr><td>Neosia67</td><td>2894</td></tr>
-<tr><td>Copieur</td><td>2893</td></tr>
-<tr><td>Victor</td><td>2892</td></tr>
-<tr><td>Pacificateur</td><td>2862</td></tr>
-<tr><td>Pavlov</td><td>2847</td></tr>
-<tr><td>Friend</td><td>2844</td></tr>
-<tr><td>Rancunierdoux</td><td>2841</td></tr>
-<tr><td>Daddy</td><td>2760</td></tr>
-<tr><td>Rancunier</td><td>2710</td></tr>
-<tr><td>Paultato</td><td>2669</td></tr>
-<tr><td>Indecis</td><td>2155</td></tr>
-<tr><td>Foe</td><td>1530</td></tr>
-<tr><td>Issam</td><td>1518</td></tr>
-<tr><td>Lea</td><td>1486</td></tr>
-<tr><td><strong>Total</strong></td><td><strong>34901</strong></td></tr>
+</tr></table><br /><br /><br /><table><tr><td>Issam</td><td>3293</td></tr>
+<tr><td>Neosia67</td><td>3248</td></tr>
+<tr><td>Rancunierdoux</td><td>3218</td></tr>
+<tr><td>Copieur</td><td>3200</td></tr>
+<tr><td>Victor</td><td>3154</td></tr>
+<tr><td>Pavlov</td><td>3144</td></tr>
+<tr><td>Pacificateur</td><td>3125</td></tr>
+<tr><td>Friend</td><td>3105</td></tr>
+<tr><td>Daddy</td><td>3083</td></tr>
+<tr><td>Rancunier</td><td>2962</td></tr>
+<tr><td>Paultato</td><td>2926</td></tr>
+<tr><td>Indecis</td><td>2414</td></tr>
+<tr><td>Lea</td><td>1516</td></tr>
+<tr><td>Foe</td><td>1485</td></tr>
+<tr><td><strong>Total</strong></td><td><strong>39873</strong></td></tr>
 </table></body>
 </html>
