--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <td>Friend</td>
     <td>Foe</td>
 </tr><tr><td>Copieur</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
+<td>236</td>
+<td>72</td>
+<td>28</td>
 <td>Daddy</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
+<td>236</td>
+<td>72</td>
+<td>28</td>
 </tr><td>Copieur</td>
 <td>0</td>
 <td>1</td>
@@ -35,13 +35,13 @@
 <td>100</td>
 <td>0</td>
 </tr><td>Copieur</td>
-<td>204</td>
-<td>52</td>
+<td>183</td>
 <td>48</td>
+<td>52</td>
 <td>Indecis</td>
-<td>204</td>
-<td>52</td>
-<td>48</td>
+<td>188</td>
+<td>47</td>
+<td>53</td>
 </tr><td>Copieur</td>
 <td>297</td>
 <td>100</td>
@@ -116,10 +116,10 @@
 <td>0</td>
 </tr><td>Daddy</td>
 <td>0</td>
-<td>33</td>
-<td>67</td>
+<td>42</td>
+<td>58</td>
 <td>Foe</td>
-<td>165</td>
+<td>210</td>
 <td>0</td>
 <td>100</td>
 </tr><td>Daddy</td>
@@ -131,13 +131,13 @@
 <td>100</td>
 <td>0</td>
 </tr><td>Daddy</td>
-<td>152</td>
-<td>56</td>
-<td>44</td>
+<td>198</td>
+<td>50</td>
+<td>50</td>
 <td>Indecis</td>
-<td>232</td>
-<td>40</td>
-<td>60</td>
+<td>198</td>
+<td>50</td>
+<td>50</td>
 </tr><td>Daddy</td>
 <td>297</td>
 <td>100</td>
@@ -148,10 +148,10 @@
 <td>1</td>
 </tr><td>Daddy</td>
 <td>3</td>
-<td>38</td>
-<td>62</td>
+<td>45</td>
+<td>55</td>
 <td>Lea</td>
-<td>188</td>
+<td>223</td>
 <td>1</td>
 <td>99</td>
 </tr><td>Daddy</td>
@@ -163,21 +163,21 @@
 <td>99</td>
 <td>1</td>
 </tr><td>Daddy</td>
-<td>276</td>
-<td>80</td>
-<td>20</td>
+<td>302</td>
+<td>95</td>
+<td>5</td>
 <td>Pacificateur</td>
-<td>246</td>
-<td>86</td>
-<td>14</td>
+<td>287</td>
+<td>98</td>
+<td>2</td>
 </tr><td>Daddy</td>
-<td>287</td>
-<td>93</td>
-<td>7</td>
+<td>16</td>
+<td>42</td>
+<td>58</td>
 <td>Paultato</td>
-<td>287</td>
-<td>93</td>
-<td>7</td>
+<td>206</td>
+<td>4</td>
+<td>96</td>
 </tr><td>Daddy</td>
 <td>300</td>
 <td>100</td>
@@ -187,29 +187,29 @@
 <td>100</td>
 <td>0</td>
 </tr><td>Daddy</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
+<td>284</td>
+<td>94</td>
+<td>6</td>
 <td>Rancunier</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
+<td>284</td>
+<td>94</td>
+<td>6</td>
 </tr><td>Daddy</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
-<td>Rancunierdoux</td>
-<td>300</td>
-<td>100</td>
-<td>0</td>
-</tr><td>Daddy</td>
-<td>271</td>
-<td>82</td>
-<td>18</td>
-<td>Victor</td>
 <td>266</td>
-<td>83</td>
-<td>17</td>
+<td>84</td>
+<td>16</td>
+<td>Rancunierdoux</td>
+<td>266</td>
+<td>84</td>
+<td>16</td>
+</tr><td>Daddy</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
+<td>Victor</td>
+<td>300</td>
+<td>100</td>
+<td>0</td>
 </tr><td>Foe</td>
 <td>500</td>
 <td>0</td>
@@ -219,13 +219,13 @@
 <td>100</td>
 <td>0</td>
 </tr><td>Foe</td>
-<td>270</td>
+<td>280</td>
 <td>0</td>
 <td>100</td>
 <td>Indecis</td>
 <td>0</td>
-<td>54</td>
-<td>46</td>
+<td>56</td>
+<td>44</td>
 </tr><td>Foe</td>
 <td>5</td>
 <td>0</td>
@@ -299,13 +299,13 @@
 <td>1</td>
 <td>99</td>
 </tr><td>Friend</td>
-<td>111</td>
+<td>168</td>
 <td>100</td>
 <td>0</td>
 <td>Indecis</td>
-<td>426</td>
-<td>37</td>
-<td>63</td>
+<td>388</td>
+<td>56</td>
+<td>44</td>
 </tr><td>Friend</td>
 <td>297</td>
 <td>100</td>
@@ -379,77 +379,77 @@
 <td>100</td>
 <td>0</td>
 </tr><td>Indecis</td>
-<td>18</td>
-<td>56</td>
+<td>21</td>
 <td>44</td>
+<td>56</td>
 <td>Issam</td>
-<td>278</td>
-<td>4</td>
-<td>96</td>
+<td>216</td>
+<td>5</td>
+<td>95</td>
 </tr><td>Indecis</td>
 <td>3</td>
-<td>51</td>
-<td>49</td>
+<td>52</td>
+<td>48</td>
 <td>Lea</td>
-<td>253</td>
+<td>258</td>
 <td>1</td>
 <td>99</td>
 </tr><td>Indecis</td>
-<td>172</td>
-<td>56</td>
-<td>44</td>
+<td>151</td>
+<td>50</td>
+<td>50</td>
 <td>Neosia67</td>
-<td>232</td>
-<td>44</td>
+<td>216</td>
+<td>37</td>
+<td>63</td>
+</tr><td>Indecis</td>
+<td>325</td>
 <td>56</td>
-</tr><td>Indecis</td>
-<td>320</td>
-<td>55</td>
-<td>45</td>
+<td>44</td>
 <td>Pacificateur</td>
-<td>185</td>
-<td>82</td>
-<td>18</td>
+<td>190</td>
+<td>83</td>
+<td>17</td>
 </tr><td>Indecis</td>
-<td>207</td>
-<td>52</td>
-<td>48</td>
+<td>209</td>
+<td>53</td>
+<td>47</td>
 <td>Paultato</td>
-<td>202</td>
+<td>209</td>
 <td>53</td>
 <td>47</td>
 </tr><td>Indecis</td>
-<td>400</td>
-<td>50</td>
-<td>50</td>
+<td>418</td>
+<td>41</td>
+<td>59</td>
 <td>Pavlov</td>
-<td>150</td>
+<td>123</td>
 <td>100</td>
 <td>0</td>
 </tr><td>Indecis</td>
-<td>8</td>
-<td>46</td>
-<td>54</td>
-<td>Rancunier</td>
-<td>228</td>
-<td>2</td>
-<td>98</td>
-</tr><td>Indecis</td>
-<td>227</td>
-<td>58</td>
-<td>42</td>
-<td>Rancunierdoux</td>
-<td>222</td>
-<td>59</td>
-<td>41</td>
-</tr><td>Indecis</td>
-<td>197</td>
-<td>48</td>
-<td>52</td>
-<td>Victor</td>
-<td>192</td>
-<td>49</td>
+<td>5</td>
 <td>51</td>
+<td>49</td>
+<td>Rancunier</td>
+<td>255</td>
+<td>1</td>
+<td>99</td>
+</tr><td>Indecis</td>
+<td>186</td>
+<td>43</td>
+<td>57</td>
+<td>Rancunierdoux</td>
+<td>181</td>
+<td>44</td>
+<td>56</td>
+</tr><td>Indecis</td>
+<td>210</td>
+<td>52</td>
+<td>48</td>
+<td>Victor</td>
+<td>210</td>
+<td>52</td>
+<td>48</td>
 </tr><td>Issam</td>
 <td>3</td>
 <td>4</td>
@@ -738,20 +738,20 @@
 <td>300</td>
 <td>100</td>
 <td>0</td>
-</tr></table><br /><br /><br /><table><tr><td>Issam</td><td>3293</td></tr>
-<tr><td>Neosia67</td><td>3248</td></tr>
-<tr><td>Rancunierdoux</td><td>3218</td></tr>
-<tr><td>Copieur</td><td>3200</td></tr>
-<tr><td>Victor</td><td>3154</td></tr>
-<tr><td>Pavlov</td><td>3144</td></tr>
-<tr><td>Pacificateur</td><td>3125</td></tr>
-<tr><td>Friend</td><td>3105</td></tr>
-<tr><td>Daddy</td><td>3083</td></tr>
-<tr><td>Rancunier</td><td>2962</td></tr>
-<tr><td>Paultato</td><td>2926</td></tr>
-<tr><td>Indecis</td><td>2414</td></tr>
-<tr><td>Lea</td><td>1516</td></tr>
-<tr><td>Foe</td><td>1485</td></tr>
-<tr><td><strong>Total</strong></td><td><strong>39873</strong></td></tr>
+</tr></table><br /><br /><br /><table><tr><td>Neosia67</td><td>3232</td></tr>
+<tr><td>Issam</td><td>3231</td></tr>
+<tr><td>Victor</td><td>3206</td></tr>
+<tr><td>Pacificateur</td><td>3171</td></tr>
+<tr><td>Friend</td><td>3162</td></tr>
+<tr><td>Rancunierdoux</td><td>3143</td></tr>
+<tr><td>Pavlov</td><td>3117</td></tr>
+<tr><td>Copieur</td><td>3115</td></tr>
+<tr><td>Rancunier</td><td>2973</td></tr>
+<tr><td>Paultato</td><td>2852</td></tr>
+<tr><td>Daddy</td><td>2799</td></tr>
+<tr><td>Indecis</td><td>2302</td></tr>
+<tr><td>Lea</td><td>1556</td></tr>
+<tr><td>Foe</td><td>1540</td></tr>
+<tr><td><strong>Total</strong></td><td><strong>39399</strong></td></tr>
 </table></body>
 </html>
